@@ -1,0 +1,47 @@
+nil
+  standard-type
+    abstract-type
+    meta-type
+    custom-hash-type
+    slot-type
+    port-type
+    random-state-type-type
+  slot
+    object-slot
+    int-slot
+    boolean-slot
+    string-slot
+    size_t-slot
+    long-slot
+  list
+    empty-list
+    pair
+  function 
+    standard-function
+    primtive
+  symbol
+  macro
+  form
+  vector
+  environment
+  hash
+    standard-hash
+  eof-object
+  number
+    real
+      flonum
+      rational
+        fracnum
+        integer
+          fixnum
+          bignum
+  port
+    null-port
+  random-state
+    default-random-state
+    file-random-state
+  promise
+  decoded-time
+  weak-reference
+  weak-vector
+  weak-key-hash
