@@ -1,3 +1,9 @@
+2008-11-26  Ales Hakl  <ales at hakl dot net>
+
+	* doc/type-hierarchy: some incomplete chart
+
+	* src/repl.c (main): fixed expression evaluation code
+
 2008-11-25  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c (dfsch_obj_write): inherit display function
